# python_auto

./: .gitignore  conftest.py  main.py  requirements.txt
lesson_10_Allure/tests/: test_dynamic_labels.py  test_selene.py  test_selene_lambda_steps.py  test_selene_steps_with_decorator.py
lesson_15_parametrize/tests/: test_github_parametrize.py  test_github_skip.py
lesson_15_pytest/tests/: conftest.py  github_fixtures.py
lesson_16_poetry/: pyproject.toml
lesson_17_api/: test_reqres.py
lesson_18_api/tests/: conftest.py  tests_add_to_cart.py
lesson_19_ui_1/tests/android_app/: conftest.py  script_wikipedia.py
lesson_19_ui_1/tests/test_home_work/: config.py  conftest.py  test_search_wikipedia.py
lesson_3_fixtures/: conftest.py
lesson_3_fixtures/home_work/: search.py
lesson_3_fixtures/lesson/: test_fixtures.py
lesson_4_primitives/home_work/: primitives.py
lesson_4_primitives/lesson/: lesson_4.py
lesson_5/home_work/: conftest.py  test_hw.py
lesson_5/lesson/: test_browser_config.py  test_css_locators.py  test_google_search.py
lesson_6_basic/: home_work.py
lesson_6_basic/lesson/: functions.py  loops.py
lesson_7_file/: lessons_7.py  script_archive.py  script_open.py  script_os.py  script_pdf.py  script_xls.py  script_xlsx.py
lesson_7_file/home_work/: For_tests_hw_csv.csv  For_tests_hw_xls.xls  create_zip.py
lesson_7_file/tmp/: For_tests.xlsx
lesson_8_OOP/: users.csv
lesson_8_OOP/home_work_8/: models.py  test_shop.py
lesson_9_Page_object/lesson/: conftest.py  practice_form_test.py
lesson_jenkins/utils/: attach.py
(+11 files in other folders)
