[project]
name = "python-auto"
version = "0.1.0"
description = ""
authors = [
    {name = "altynnikov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "selenium (>=4.34.1,<4.35.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

